fixing checkboxes missalignement in the treepanel on IE
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@1220 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/TreePanel/css/treepanel.css
+++ b/chsdi/public/GeoAdmin.ux/TreePanel/css/treepanel.css
@@ -206,7 +206,7 @@ div.nodeTP3selected >  a.x-tree-node-anchor span {
 }
 
 .ext-ie .layerNodeTools {
-  margin-top: 0px;
+  margin-top: -20px !important;
 }
 
 .ext-safari .layerNodeTools {
